# rustwebactixtest

./: Cargo.toml  README.md  docker-compose.yml  env  run.sh  run_tests.sh
cli/: cli.py  pyproject.toml
migrations/2024-12-06-092109_whiskey_types/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: mod.rs  whiskey_type_api.rs
src/models/: mod.rs  whiskey_type_model.rs
tests/: .env  mock_data.json
