[package]
name = "rustweb"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres"] }
serde = {version = "1.0.202", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.133"
polars = { version = "0.44.2", features = ["lazy"] }
postgres = "0.19.9"
itertools = "0.13.0"
